test/expected/define_namespace_c_namespace_c.out
namespace N { class C; }; define D of namespace C of namespace N as class D
          ^
11: error: "N::C" was previously declared as a class:
> namespace N { class C; }
